# gd-hacks

./: CMakeLists.txt  LICENSE  README.md
libraries/: json.hpp
libraries/cocos-headers/cocos2dx/: libcocos2d.lib
libraries/cocos-headers/cocos2dx/draw_nodes/: CCDrawNode.h
libraries/gd.h/manager_nodes/: GameManager.h
libraries/imgui/: imgui.cpp  imgui.h  imgui_widgets.cpp
libraries/imgui-hook/: CMakeLists.txt  LICENSE  README.md  imgui-hook.cpp  imgui-hook.hpp
libraries/imgui/backends/: imgui_impl_glfw.cpp
src/: bools.hpp  config.cpp  config.hpp  dllmain.cpp  font.h  gd.hpp  gui.cpp  gui.hpp  hacks.hpp  hooks.cpp  hooks.hpp  includes.hpp  main.cpp  rich.cpp  rich.hpp  saving.hpp  utils.cpp  utils.hpp
src/hacks/: bools.hpp  gd.hpp  hacks.hpp  rich.cpp  rich.hpp
src/other/: bot.cpp  bot.hpp  logging.cpp  logging.hpp  reader.cpp  reader.hpp
